# etoon

./: .gitignore  ATTRIBUTION.md  Cargo.toml  LICENSE  README.md  README.zh-TW.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml
python/etoon/: __init__.py
src/: lib.rs  toon.rs
tests/: test_spec_fixtures.py
tests/fixtures/encode/: key-folding.json
