[package]
name = "etoon"
version = "0.1.0"
edition = "2021"

[lib]
name = "_etoon"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "etoon"
path = "src/bin/etoon.rs"
required-features = []

[features]
default = ["python"]
python = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
serde_json = { version = "1.0", features = ["preserve_order", "arbitrary_precision"] }
itoa = "1.0"
ryu = "1.0"
memchr = "2.7"
jiter = { version = "0.13.0", default-features = false }
simd-json = { version = "0.17.0", default-features = false }
sonic-rs = { version = "0.5.8", default-features = false }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
