[package]
name = "etoon"
version = "0.2.0"
edition = "2021"
description = "Fast TOON (Token-Oriented Object Notation) encoder. 8x faster than toons, 2.7x faster than the official TS SDK."
license = "Apache-2.0"
repository = "https://github.com/coseto6125/etoon"
keywords = ["toon", "serialization", "llm", "json", "encoder"]
categories = ["encoding", "parser-implementations"]
readme = "README.md"

[lib]
name = "_etoon"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "etoon"
path = "src/bin/etoon.rs"
required-features = []

[features]
default = ["python"]
python = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }
sonic-rs = { version = "0.5.8", default-features = false }
itoa = "1.0.18"


[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
